# irmin-watcher

./: .gitignore  .merlin  .ocamlformat  .travis.yml  CHANGES.md  Irmin_watcher.html  Irmin_watcher_core.Callback.html  Irmin_watcher_core.Digests.html  Irmin_watcher_core.Dispatch.html  Irmin_watcher_core.Watchdog.html  Irmin_watcher_core.html  Irmin_watcher_fsevents.html  Irmin_watcher_inotify.html  Irmin_watcher_polling.html  Makefile  README.md  _tags  dune-project  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  irmin-watcher.opam  irmin-watcher.opam.template  myocamlbuild.ml  opam  type_Irmin_watcher.html  type_Irmin_watcher_core.Callback.html  type_Irmin_watcher_core.Digests.html  type_Irmin_watcher_core.Dispatch.html  type_Irmin_watcher_core.Watchdog.html  type_Irmin_watcher_core.html  (+3 more)
.github/workflows/: test.yml
doc/: api.odocl
irmin-watcher/: index.html
irmin-watcher/Irmin_watcher/: index.html
irmin-watcher/Irmin_watcher__/: index.html
irmin-watcher/Irmin_watcher__/Backend/: index.html
irmin-watcher/Irmin_watcher__/Core/: index.html
irmin-watcher/Irmin_watcher__/Core/Digests/: index.html
irmin-watcher/Irmin_watcher__/Core/Dispatch/: index.html
irmin-watcher/Irmin_watcher__/Core/Watchdog/: index.html
irmin-watcher/Irmin_watcher__/Hook/: index.html
irmin-watcher/Irmin_watcher__/Polling/: index.html
irmin-watcher/Irmin_watcher__Backend/: index.html
irmin-watcher/Irmin_watcher__Core/: index.html
irmin-watcher/Irmin_watcher__Core/Digests/: index.html
irmin-watcher/Irmin_watcher__Core/Dispatch/: index.html
irmin-watcher/Irmin_watcher__Core/Watchdog/: index.html
irmin-watcher/Irmin_watcher__Hook/: index.html
irmin-watcher/Irmin_watcher__Polling/: index.html
pkg/: META  META.in  pkg.ml
src/: backend.fsevents.ml  backend.fsevents.mli  backend.inotify.ml  backend.inotify.mli  backend.polling.mli  core.ml  core.mli  dune  fsevents.ml  fsevents.mli  hook.ml  hook.mli  inotify.ml  inotify.mli  irmin-watcher-core.mllib  irmin-watcher-fsevents.mllib  irmin-watcher-inotify.mllib  irmin-watcher-polling.mllib  irmin_watcher.ml  irmin_watcher.mli  irmin_watcher_core.ml  irmin_watcher_core.mli  irmin_watcher_fsevents.ml  irmin_watcher_fsevents.mli  irmin_watcher_hook.ml  irmin_watcher_hook.mli  irmin_watcher_inotify.ml  irmin_watcher_inotify.mli  irmin_watcher_polling.ml  irmin_watcher_polling.mli  jbuild  librealpath.clib  polling.ml  polling.mli  realpath.c
test/: dune  test.ml
