opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      "Thomas Gazagnaire <thomas@gazagnaire.org>"
homepage:     "https://github.com/mirage/irmin-watcher"
doc:          "https://mirage.github.io/irmin-watcher/"
dev-repo:     "git+https://github.com/mirage/irmin-watcher.git"
bug-reports:  "https://github.com/mirage/irmin-watcher/issues"
license:      "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "runtest" "-p" name]

depends: [
  "ocaml"    {>= "4.02.0"}
  "dune"     {>= "2.0"}
  "alcotest" {with-test}
  "mtime"    {with-test & >= "1.0.0"}
  "lwt"
  "logs"
  "fmt"
  "astring"
  "inotify"  {os = "linux"}
  "cf-lwt"
  "fsevents-lwt"
]

synopsis: "Portable Irmin watch backends using FSevents or Inotify"
description: """
irmin-watcher implements [Irmin's watch hooks][watch] for various OS,
using FSevents in macOS and Inotify on Linux.

irmin-watcher is distributed under the ISC license.

[watch]: http://mirage.github.io/irmin/irmin/Irmin/Private/Watch/index.html#type-hook
"""

pin-depends: [
  [ "fsevents.dev" "git+https://github.com/mirage/ocaml-fsevents.git#f9e797e16bdbc730804cd684f07808022495c333" ]
  [ "fsevents-lwt.dev" "git+https://github.com/mirage/ocaml-fsevents.git#f9e797e16bdbc730804cd684f07808022495c333" ]
  [ "cf.dev" "git+https://github.com/mirage/ocaml-cf.git#918e2b9a7ab6871e48cce0508bce5e45981375f6" ]
  [ "cf-lwt.dev" "git+https://github.com/mirage/ocaml-cf.git#918e2b9a7ab6871e48cce0508bce5e45981375f6" ]
]
