(library
 (foreign_stubs
  (language c)
  (names realpath))
 (name irmin_watcher)
 (public_name irmin-watcher)
 (libraries
  fmt
  logs
  astring
  lwt_eio
  eio.unix
  (select
   backend.ml
   from
   (cf-eio fsevents-eio -> backend.fsevents.ml)
   (inotify.eio -> backend.inotify.ml)
   (lwt.unix -> backend.polling.ml))
  (select
   backend.mli
   from
   (cf-eio fsevents-eio -> backend.fsevents.mli)
   (inotify.eio -> backend.inotify.mli)
   (lwt.unix -> backend.polling.mli))))
