(library
 (foreign_stubs
  (language c)
  (names realpath))
 (name irmin_watcher)
 (public_name irmin-watcher)
 (libraries
  fmt
  logs
  astring
  eio.unix
  (select
   backend.ml
   from
   (cf-lwt fsevents-lwt lwt_eio -> backend.fsevents.ml)
   (inotify-eio -> backend.inotify.ml)
   (eio -> backend.polling.ml))
  (select
   backend.mli
   from
   (cf-lwt fsevents-lwt lwt_eio -> backend.fsevents.mli)
   (inotify-eio -> backend.inotify.mli)
   (eio -> backend.polling.mli))))
